--- a/Gyeonggi/course_introduce/style.css
+++ b/Gyeonggi/course_introduce/style.css
@@ -2,3 +2,35 @@
     padding: 0;
     margin: 0;
 }
+
+ul li{
+    padding-left: 0;
+    list-style: none;
+}
+
+.teb_menu ul{
+    margin-right: 10px;
+}
+
+.teb_menu button{
+    font-size: 18px;
+}
+
+.content{
+    display: none;
+    /* position: absolute; */
+    background-color: aquamarine;
+    color: #111;
+    text-align: center;
+    width: 250px;
+    height: 100px;
+    line-height: 100px;
+}
+
+.on > button{
+    background-color: aqua;
+}
+
+.on > .content{
+    display: block;
+}
