--- a/Gyeonggi/course_introduce/style.css
+++ b/Gyeonggi/course_introduce/style.css
@@ -8,29 +8,93 @@ ul li{
     list-style: none;
 }
 
-.teb_menu ul{
-    margin-right: 10px;
+main{
+    display: flex;
 }
 
-.teb_menu button{
-    font-size: 18px;
-}
-
-.content{
+input{
     display: none;
-    /* position: absolute; */
-    background-color: aquamarine;
-    color: #111;
+}
+
+.tabcontent{
+    padding: 10px;
+    width:340px;
+    border-radius: 10px;
+    background:#fff;
+}
+
+.tabcontent label {
+    display:inline-block;
+    padding:10px 20px;
+    background:#00D8CF;
+    color:#fff;
+    border-radius: 10px;
+    cursor:pointer;
+}
+
+input:checked + label {
+    background:#fff;
+    color: #00D8CF;
+    border: 1px solid #00C7FF;
+}
+
+.content-box {
+    display:none;
+    margin-top:10px;
+    padding:10px;
+    width:340px;
+    height:250px;
+    font-size:30px;
+    box-sizing:border-box;
+    border-radius:10px;
+    text-align:center;
+    background: aquamarine;
+    color:#666;
+}
+
+#tabmenu01:checked~.content01,
+#tabmenu02:checked~.content02{
+    display: block;
+}
+
+.course{
+    width: 550px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #fff;
+}
+
+.course label{
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: black;
+    color: #fff;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+input:checked + label{
+    background-color: #fff;
+    color:  #111;
+    border: 1px solid #111;
+}
+
+.course-box{
+    display: none;
+    margin-top: 10px;
+    padding: 10px;
+    width: 550px;
+    height: 250px;
+    font-size: 32px;
+    box-sizing: border-box;
+    border-radius: 10px;
     text-align: center;
-    width: 250px;
-    height: 100px;
-    line-height: 100px;
+    background-color: #111;
+    color: #fff;
 }
 
-.on > button{
-    background-color: aqua;
-}
-
-.on > .content{
+#course01:checked~.course-content01,
+#course02:checked~.course-content02,
+#course03:checked~.course-content03{
     display: block;
 }
