--- a/Gyeonggi/course_introduce/style.css
+++ b/Gyeonggi/course_introduce/style.css
@@ -95,3 +95,22 @@ input:checked + label{
 #course03:checked~.course-content03{
     display: block;
 }
+
+.map-container {
+    position: relative;
+    width: 1000px;
+    height: 700px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+}
+.pointer {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color: red;
+    border-radius: 50%;
+}
+.map-container img{
+    width: 100%;
+    height: 100%;
+}
