--- a/Gyeonggi/course_introduce/style.css
+++ b/Gyeonggi/course_introduce/style.css
@@ -98,7 +98,7 @@ input:checked + label{
 
 .map-container {
     position: relative;
-    width: 1000px;
+    width: 1280px;
     height: 700px;
     background-color: #fff;
     border: 1px solid #ccc;
@@ -113,4 +113,5 @@ input:checked + label{
 .map-container img{
     width: 100%;
     height: 100%;
+    margin-left: 10px;
 }
