--- a/Gyeonggi/course_introduce/style.css
+++ b/Gyeonggi/course_introduce/style.css
@@ -107,11 +107,18 @@ input:checked + label{
     position: absolute;
     width: 20px;
     height: 20px;
-    background-color: red;
+    background-color: #111;
     border-radius: 50%;
 }
 .map-container img{
     width: 100%;
     height: 100%;
     margin-left: 10px;
+    display: none;
+}
+
+#course01:checked~.map-container > .img01,
+#course02:checked~.map-container > .img02,
+#course03:checked~.map-container > .img03{
+    display: block;
 }
