--- a/Gyeonggi/course_introduce/style.css
+++ b/Gyeonggi/course_introduce/style.css
@@ -88,6 +88,7 @@ input:checked + label{
     text-align: center;
     background-color: #111;
     color: #fff;
+    margin-left: 10px;
 }
 
 #course01:checked~.course-content01,
@@ -97,11 +98,10 @@ input:checked + label{
 }
 
 .map-container {
-    position: relative;
+    position: absolute;
     width: 1280px;
     height: 700px;
     background-color: #fff;
-    border: 1px solid #ccc;
 }
 .pointer {
     position: absolute;
@@ -109,16 +109,17 @@ input:checked + label{
     height: 20px;
     background-color: #111;
     border-radius: 50%;
+    z-index: 1;
 }
-.map-container img{
-    width: 100%;
-    height: 100%;
-    margin-left: 10px;
+.map img{
+    position: absolute;
+    width: 1280px;
+    height: 700px;
     display: none;
 }
 
-#course01:checked~.map-container > .img01,
-#course02:checked~.map-container > .img02,
-#course03:checked~.map-container > .img03{
+#course01:checked~.map > .img01,
+#course02:checked~.map > .img02,
+#course03:checked~.map > .img03{
     display: block;
 }
