--- a/Daejeon/keyword/style.css
+++ b/Daejeon/keyword/style.css
@@ -2,3 +2,15 @@
     padding: 0;
     margin: 0;
 }
+
+#word-cloud {
+    position: absolute;
+    width: 1000px;
+    height: 1000px;
+    border: 2px solid #111;
+    overflow: hidden;
+    margin: 0 auto;
+}
+.word {
+    position: absolute;
+}
