--- a/Daejeon/keyword/style.css
+++ b/Daejeon/keyword/style.css
@@ -20,3 +20,12 @@
 .word {
     position: absolute;
 }
+
+.popup {
+    display: none;
+    position: absolute;
+    background-color: white;
+    border: 1px solid black;
+    padding: 5px;
+    z-index: 10;
+}
