--- a/Gwangju/best_festival/style.css
+++ b/Gwangju/best_festival/style.css
@@ -16,7 +16,7 @@ img{
 }
 
 .search_area{
-    width: 400px;
+    width: 700px;
     display: flex;
     align-items: center;
     margin: 10px;
@@ -25,37 +25,44 @@ img{
 
 .search_area input{
     padding-left: 10px;
-    width: 200px;
-    height: 30px;
+    width: 300px;
+    height: 40px;
     border: 1px solid black;
     border-radius: 5px;
+    font-size: 18px;
 }
 
 .search_area select{
-    width: 150px;
-    height: 30px;
+    width: 200px;
+    height: 40px;
+    font-size: 18px;
     margin-left: 10px;
     border: 1px solid black;
     border-radius: 5px;
 }
 
-.content{
-    margin-top: 100px;
-    width: 1250px;
+.content_window{
+    width: 1350px;
     height: 250px;
-    border: 2px solid black;
-    display: flex;
+    margin-top: 100px;
     margin-left: 10px;
+}
+
+.content{
+    height: 250px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .card{
     width: 240px;
     padding: 5px;
-    border: 1px solid black;
+    border-radius: 25px 5PX;
+    background-color: #F3F3F3;
 }
 
 .card h3{
-    margin-top: 40px;
+    margin-top: 20px;
     padding: 5px;
 }
 
@@ -63,9 +70,20 @@ img{
     padding: 5px;
 }
 
+.card button{
+    margin-top: 10px;
+    margin-right: 5px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: #111;
+    color: #fff;
+    font-weight: 900;
+    float: right;
+}
+
 .btn_area{
-    width: 1250px;
-    height: 50px;
+    width: 1350px;
+    height: 70px;
     display: flex;
     margin-left: 10px;
     margin-top: 10px;
@@ -81,4 +99,5 @@ img{
     font-weight: 600;
     border-radius: 5px;
     margin: 5px;
+    font-size: 18px;
 }
