--- a/Gwangju/best_festival/style.css
+++ b/Gwangju/best_festival/style.css
@@ -5,24 +5,73 @@
 
 .title{
     text-align: center;
-    margin-top: 25px;
+    line-height: 100px;
 }
 
-.festa_area{
+.content{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
 }
 
-.festa_content{
+.card{
     position: relative;
+    padding: 10px;
     width: 400px;
+    height: 450px;
+    background-color: #fff;
+    margin: 25px;
+    border: 1px solid black;
+}
+
+.card h3{
+    padding-top: 10px;
+}
+
+.card button{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 5px 10px;
+}
+
+.card label{
+    display: block;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 5px 10px;
+    font-size: 14px;
+}
+
+.card img{
+    width: 400px;
+    height: 300px;
+}
+
+.festa_modal{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
     height: 700px;
     padding: 10px;
     border: 1px solid black;
     background-color: #fff;
     border-radius: 10px;
     margin: 25px;
+    display: none;
+}
+
+#modal:checked~.festa_modal{
+    display: block;
 }
 
 .close-button{
@@ -33,10 +82,14 @@
     cursor: pointer;
 }
 
-.festa_content img{
+.festa_modal img{
     width: 100%;
     height: 300px;
     margin-top: 50px;
+}
+
+.festa_modal p{
+    font-size: 18px;
 }
 
 .festa_btn_area{
