--- a/Gyeonggi/A_module/style.css
+++ b/Gyeonggi/A_module/style.css
@@ -56,12 +56,18 @@ nav{
     font-size: 18px;
 }
 
+.main_menu > li:hover{
+    background-color: #111;
+    color: #fff;
+}
+
 .sub_menu{
     position: absolute;
     width: 250px;
     height: 0px;
     background-color: #fff;
     overflow: hidden;
+    margin-left: -20px;
 }
 
 .sub_menu li{
@@ -69,6 +75,12 @@ nav{
     text-align: left;
     padding-left: 10px;
     z-index: 1;
+    color: #111;
+}
+
+.sub_menu li:hover{
+    background-color: #111;
+    color: #fff;
 }
 
 .main_menu > li:hover .sub_menu{
@@ -162,10 +174,12 @@ nav{
 }
 
 .notice_area{
-    margin-top: 50px;
     width: 100%;
+    height: 500px;
     display: flex;
+    align-items: center;
     justify-content: center;
+    background-color: #fff;
 }
 
 .notice{
@@ -173,8 +187,9 @@ nav{
     width: 1440px;
 }
 
-.notice h2{
-    margin-bottom: 30px;
+.notice h1{
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .notice label{
@@ -182,15 +197,17 @@ nav{
     width: 100px;
     height: 40px;
     background-color: #fff;
-    border: 1px solid #111;
     text-align: center;
     line-height: 40px;
     font-size: 18px;
+    color: gray;
+    font-weight: 600;
 }
 
 .notice input:checked + label{
-    background-color: #111;
-    color: #fff;
+    border-bottom: 2px solid #111;
+    color: #111;
+    font-weight: 900;
 }
 
 .notice_box01,
@@ -200,15 +217,8 @@ nav{
     justify-content: space-between;
 }
 
-.notice_box01 img,
-.notice_box02 img,
-.notice_box03 img{
-    width: 600px;
-    height: 300px;
-}
-
 .notice_box{
-    width: 650px;
+    width: 750px;
     height: 300px;
 }
 
@@ -231,13 +241,19 @@ nav{
 }
 
 .notice_list:hover h4{
-    background-color: yellow;
-    transition: all 0.5s;
+    color: #03c75a;
 }
 
 .notice_box span{
     position: absolute;
     right: 20px;
+}
+
+.notice_box01 img,
+.notice_box02 img,
+.notice_box03 img{
+    width: 600px;
+    height: 300px;
 }
 
 footer{
