--- a/Gyeonggi/A_module/style.css
+++ b/Gyeonggi/A_module/style.css
@@ -118,13 +118,13 @@ nav{
 
 .visual{
     width: 100%;
-    height: 600px;
+    height: 700px;
     overflow: hidden;
 }
 
 .slider{
     width: 7200px;
-    height: 600px;
+    height: 700px;
     display: flex;
     position: relative;
     animation: infinite linear 10s slider;
@@ -256,7 +256,111 @@ nav{
     height: 300px;
 }
 
-footer{
+.gall_area{
     width: 100%;
-    height: 300px;
+    height: 900px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #eee;
+}
+
+.gall_content{
+    width: 1440px;
+    height: 800px;
+}
+
+.gall_content h1{
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.gall_container{
+    width: 1440px;
+    height: 730px;
+    overflow: auto;
+    scroll-snap-type: y mandatory;
+    flex-direction: column;
+}
+
+.gall_container::-webkit-scrollbar{
+    display: none;
+}
+
+.gall_img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    flex: none;
+    scroll-snap-align: start;
+}
+
+.gall_txt{
+    color: #fff;
+    position: absolute;
+    font-size: 24px;
+}
+
+.gall_txt01{
+    top: 20px;
+    right: 20px;
+}
+
+.gall_txt02{
+    top: 200px;
+    left: 200px;
+}
+
+.gall_txt03{
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.gall_img img{
+    width: 100%;
+    height: 100%;
+}
+
+.footer_area{
+    width: 100%;
+    height: 100px;
+    background-color: #111;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer{
+    width: 1440px;
+    height: 100px;
+    display: flex;
+    color: #555;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer_logo{
+    width: 200px;
+    height: 100%;
+    text-align: left;
+    line-height: 100px;
+    font-size: 28px;
+    font-weight: bolder;
+}
+
+.copy{
+    font-size: 20px;
+}
+
+.sns{
+    width: 180px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.sns i{
+    font-size: 44px;
 }
