--- a/Gyeonggi/start/course.css
+++ b/Gyeonggi/start/course.css
@@ -231,16 +231,22 @@ nav{
 }
 
 /* 캔버스 */
+.map-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 canvas {
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 11;
+    z-index: 1;
 }
 
 .festa_area img{
     position: absolute;
-    top: 170px;
+    top: 160px;
     right: 0;
     width: 1280px;
     height: 700px;
