--- a/Daejeon/start/style.css
+++ b/Daejeon/start/style.css
@@ -13,6 +13,7 @@ a{
     color: inherit;
 }
 
+/* 헤더 영역 */
 .header_area{
     position: fixed;
     width: 100%;
@@ -119,6 +120,7 @@ nav{
 
 #nav:checked~.nav_modal{
     width: 100%;
+    transition: all 0.5s;
 }
 
 .nav_modal{
@@ -153,9 +155,7 @@ nav{
     display: block;
     width: 45px;
     height: 70px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: 5px;
 }
 
 .height_nav label svg{
@@ -200,7 +200,8 @@ nav{
 .sub_menu2 li:hover{
     background-color: #111;
 }
-
+/* 헤더 영역 */
+/* 비주얼 영역 */
 .visual{
     width: 100%;
     height: 950px;
@@ -245,3 +246,145 @@ nav{
     75%,95%{left: -300%;}
     100%{left: -400%;}
 }
+/* 비주얼 영역 */
+/* 경북 베스트5 영역 */
+.best5_area{
+    position: relative;
+    width: 100%;
+    height: 1550px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.best5_area > h1{
+    position: absolute;
+    top: 30px;
+}
+
+.best5{
+    position: relative;
+    width: 1440px;
+    height: 100%;
+    margin-top: 200px;
+}
+
+.card{
+    position: relative;
+    width: 1000px;
+    height: 200px;
+    background-color: #fff;
+    overflow: hidden;
+    display: flex;
+    box-shadow: 0 0 5px #444;
+    margin: 30px;
+    padding: 10px;
+    transition: all 0.5s;
+}
+
+.card:hover{
+    transform: scale(1.1);
+}
+
+.card:hover .best5_txt p{
+    color: #111;
+}
+
+.card:nth-child(1), .card:nth-child(3), .card:nth-child(5){
+    float: left;
+}
+
+.card:nth-child(2), .card:nth-child(4){
+    float: right;
+}
+
+.card img{
+    width: 400px;
+    height: 200px;
+    cursor: pointer;
+}
+
+.best5_txt{
+    width: 600px;
+    height: 200px;
+}
+.best5_txt h3{
+    width: 100%;
+    height: 100px;
+    line-height: 100px;
+    padding-left: 20px;
+}
+
+.best5_txt p{
+    font-size: 12px;
+    color: #444;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+/* 경북 베스트5 영역 */
+.tour_guide_area{
+    position: relative;
+    width: 100%;
+    height: 800px;
+}
+
+.tour_guide_area h1{
+    text-align: center;
+    line-height: 50px;
+}
+
+.tour_guide{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 1440px;
+    height: 750px;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+
+.tour_img{
+    height: 250px;
+}
+
+.tour_img img{
+    width: 100%;
+    height: 100%;
+}
+.tour_img1{width: 300px;}
+.tour_img2{width: 540px;}
+.tour_img3{width: 300px;}
+.tour_img4{width: 300px;}
+.tour_img5{width: 400px;}
+.tour_img6{width: 640px;}
+.tour_img7{width: 400px;}
+.tour_img8{width: 900px;}
+.tour_img9{width: 540px;}
+
+.tour_img p{
+    position: absolute;
+    width: calc(100% - 10px);
+    height: 250px;
+    padding-left: 10px;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    color: #fff;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.tour_img:hover p{
+    opacity: 1;
+    visibility: visible;
+    transition: all 0.5s;
+}
+
+/* 경북 베스트5 영역 */
+/* 푸터 영역 */
+footer{
+    width: 100%;
+    height: 100px;
+    background-color: #111;
+}
+/* 푸터 영역 */
