--- a/Daejeon/start/style.css
+++ b/Daejeon/start/style.css
@@ -255,6 +255,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #c8fcea;
 }
 
 .best5_area > h1{
@@ -316,7 +317,7 @@ nav{
 }
 
 .best5_txt p{
-    font-size: 12px;
+    font-size: 14px;
     color: #444;
     padding-left: 20px;
     padding-right: 20px;
@@ -325,12 +326,13 @@ nav{
 .tour_guide_area{
     position: relative;
     width: 100%;
-    height: 800px;
+    height: 850px;
+    margin-bottom: 100px;
 }
 
 .tour_guide_area h1{
     text-align: center;
-    line-height: 50px;
+    line-height: 100px;
 }
 
 .tour_guide{
@@ -382,6 +384,77 @@ nav{
 } */
 
 /* 경북 베스트5 영역 */
+/* 이달의 공연/전시 영역 */
+.schedule_area{
+    position: relative;
+    width: 100%;
+    height: 1350px;
+    background-color: #c8fcea;
+}
+
+.schedule_area h1{
+    text-align: center;
+    line-height: 100px;
+}
+
+.schedule{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 1440px;
+    height: 1150px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card2{
+    width: 340px;
+    height: 500px;
+    margin: 10px;
+}
+
+.img_box{
+    width: 340px;
+    height: 450px;
+    background-color: #fff;
+    text-align: center;
+    line-height: 450px;
+    font-size: 32px;
+    font-weight: 900;
+}
+
+.img_box img{
+    width: 100%;
+    height: 100%;
+}
+
+.schedule_date{
+    width: 100%;
+    height: 50px;
+    background-color: #4551c5;
+    color: #fff;
+    text-align: center;
+    display: flex;
+    line-height: 50px;
+    font-size: 18PX;
+}
+
+.schedule_date span{
+    width: 40%;
+    background-color: orange;
+}
+
+.schedule_date P{
+    width: 60%;
+}
+
+.schedule_title{
+    text-align: center;
+    padding: 25px;
+    font-weight: 600;
+    font-size: 18px;
+}
+/* 이달의 공연/전시 영역 */
 /* 푸터 영역 */
 footer{
     width: 100%;
