--- a/Daejeon/start/style.css
+++ b/Daejeon/start/style.css
@@ -586,9 +586,41 @@ nav{
 }
 /* 문화축제영역 */
 /* 푸터 영역 */
-footer{
+.footer_area{
     width: 100%;
-    height: 100px;
+    height: 200px;
     background-color: #111;
+    display: flex;
+    justify-content: center;
+}
+footer{
+    width: 1440px;
+    height: 200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer_txt{
+    width: 1200px;
+    height: 110px;
+    color: #444;
+    font-size: 18px;
+}
+.icon{
+    width: 240px;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.icon img{
+    width: 60px;
+    height: 60px;
+    filter: grayscale(100%);
+}
+    
+.icon img:hover{
+    transition: all 0.3s;
+    filter: none;
 }
 /* 푸터 영역 */
