--- a/Daejeon/start/style.css
+++ b/Daejeon/start/style.css
@@ -470,7 +470,7 @@ nav{
 .gall_area{
     position: relative;
     width: 100%;
-    height: 800px;
+    height: 500px;
 }
 
 .gall_area h1{
@@ -625,6 +625,7 @@ footer{
     justify-content: space-between;
 }
 .icon img{
+    border-radius: 50%;
     width: 60px;
     height: 60px;
     filter: grayscale(100%);
