--- a/Daejeon/start/style.css
+++ b/Daejeon/start/style.css
@@ -140,7 +140,6 @@ nav{
     right: 0;
     width: 0;
     height: 1080px;
-    z-index: 1;
     overflow: hidden;
 }
 
@@ -153,7 +152,6 @@ nav{
 }
 
 .height_nav{
-    margin-top: 40px;
     position: absolute;
     right: 0;
     width: 285px;
@@ -167,6 +165,7 @@ nav{
     width: 45px;
     height: 70px;
     margin: 5px;
+    margin-top: 45px;
 }
 
 .height_nav label svg{
@@ -580,10 +579,11 @@ nav{
 }
 
 .festa_box{
-    width: 300px;
-    height: 450px;
+    margin-top: -100px;
+    margin-left: 100px;
+    width: 200px;
+    height: 400px;
     transform: rotate(90deg);
-    margin: 20px;
     transition: all 0.5s;
 }
 
@@ -592,8 +592,8 @@ nav{
 }
 
 .festa_box img{
-    width: 100%;
-    height: 100%;
+    width: 250px;
+    height: 400px;
 }
 /* 문화축제영역 */
 /* 푸터 영역 */
