--- a/Gwangju/start/style.css
+++ b/Gwangju/start/style.css
@@ -294,13 +294,14 @@ nav{
     width: 1440px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .festa_card{
     position: relative;
     width: 400px;
     height: 400px;
-    margin: 40px;
+    margin-bottom: 30px;
 }
 
 .festa_card img{
@@ -428,10 +429,57 @@ nav{
 }
 /* 축제 모달창 */
 /* BEST 축제 섹션 */
-/* 임시 푸터 */
-footer{
+/* 푸터 영역 */
+.footer_area{
     width: 100%;
-    height: 100px;
+    height: 150px;
     background-color: black;
+    display: flex;
+    justify-content: center;
 }
-/* 임시 푸터 */
+
+footer{
+    width: 1440px;
+    height: 150px;
+    display: flex;
+    justify-content: space-between;
+    color: #555;
+    align-items: center;
+}
+
+.logo{
+    width: 300px;
+    height: 150px;
+    line-height: 150px;
+}
+
+footer p{
+    font-size: 20px;
+}
+
+.icon_area{
+    width: 330px;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.icon{
+    width: 100px;
+    height: 110px;
+}
+
+.icon img{
+    width: 100px;
+    height: 100px;
+    filter: grayscale(100%);
+}
+
+.icon p{
+    width: 100px;
+    height: 10px;
+    font-size: 10px;
+    text-align: center;
+}
+/* 푸터 영역 */
