--- a/Gwangju/start/style.css
+++ b/Gwangju/start/style.css
@@ -3,9 +3,35 @@
     margin: 0;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     height: 100%;
+    scroll-snap-type: y mandatory;
 }
+
+/* 최상단 이동 버튼 */
+.top_btn{
+    scroll-snap-align: start;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    width: 50px;
+    height: 50px;
+    background: blue;
+    color: #fff;
+    text-align: center;
+    line-height: 50px;
+    font-size: 20px;
+    font-weight: bolder;
+    border-radius: 50%;
+    border: none;
+    transform: rotate(-90deg);
+    z-index: 1;
+}
+/* 최상단 이동 버튼 */
 
 a{
     text-decoration: none;
@@ -370,6 +396,7 @@ nav{
     height: 100vh;
     background: rgba(0, 0, 0, 0.5);
     display: none;
+    z-index: 10;
 }
 
 .festa_modal{
