--- a/Gwangju/start/style.css
+++ b/Gwangju/start/style.css
@@ -456,6 +456,117 @@ nav{
 }
 /* 축제 모달창 */
 /* BEST 축제 섹션 */
+/* 축제 찾기 섹션 */
+.search_area{
+    position: relative;
+    width: 100%;
+    height: 800px;
+    display: flex;
+    justify-content: center;
+    background-color: beige;
+}
+
+.search_area h1{
+    position: absolute;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.search{
+    margin-top: 100px;
+    width: 1440px;
+    height: 500px;
+}
+
+.search_box{
+    position: relative;
+    width: 100%;
+    height: 300px;
+}
+
+.search_box img{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 300px;
+    height: 300px;
+}
+
+.search_box input{
+    padding-left: 10px;
+    width: 250px;
+    height: 40px;
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: 18px;
+    margin-top: 80px;
+    margin-bottom: 20px;
+}
+
+.search_box select{
+    width: 200px;
+    height: 40px;
+    font-size: 18px;
+    margin-top: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.content{
+    width: 100%;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.card{
+    width: 250px;
+    padding: 5px;
+    background-color: #fff;
+}
+
+.card h3{
+    margin-top: 20px;
+    padding: 5px;
+}
+
+.card p{
+    padding: 5px;
+}
+
+.card button{
+    margin-top: 10px;
+    margin-right: 5px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: #111;
+    color: #fff;
+    font-weight: 900;
+    float: right;
+}
+
+.search_btn_area{
+    width: 1440px;
+    height: 60px;
+    display: flex;
+    margin-left: 10px;
+    margin-top: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.prev, .next{
+    width: 100px;
+    height: 40px;
+    border: 1px solid black;
+    background-color: #fff;
+    font-weight: 600;
+    border-radius: 5px;
+    margin: 5px;
+    font-size: 18px;
+}
+/* 축제 찾기 섹션 */
 /* 푸터 영역 */
 .footer_area{
     width: 100%;
