--- a/Gwangju/start/style.css
+++ b/Gwangju/start/style.css
@@ -567,6 +567,69 @@ nav{
     font-size: 18px;
 }
 /* 축제 찾기 섹션 */
+/* 이달의 축제 섹션 */
+.calender_area{
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 30px;
+}
+
+.calender{
+    width: 1440px;
+    margin-top: 30px;
+    width: 908px;
+    height: 100%;
+}
+    
+.calender h3{
+    width: 100%;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+    font-size: 34px;
+}
+
+.table{
+    border: 1px solid black;
+}
+
+.calender ul{
+    display: flex;
+}
+
+.calender li{
+    position: relative;
+    width: 130px;
+    height: 130px;
+    font-size: 28px;
+    overflow: hidden;
+    border: 1px solid black;
+    padding: 10px;
+}
+
+.calender li p{
+    position: absolute;
+    top: 60%;
+    transform: translateY(-50%);
+    font-size: 14px;
+    color: #333;
+    white-space: pre;
+}
+
+.red{
+    color: red;
+}
+
+.blue{
+    color: blue;
+}
+
+.gray{
+    color: gray;
+}
+/* 이달의 축제 섹션 */
 /* 푸터 영역 */
 .footer_area{
     width: 100%;
