--- a/Daejeon/start/style.css
+++ b/Daejeon/start/style.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+body{
+    height: 100%;
+}
+
 ul li{
     padding-left: 0;
     list-style: none;
@@ -30,7 +34,8 @@ a{
     color: #fff;
 }
 
-.sgin_btn div{
+.sgin_btn label{
+    display: block;
     width: 80px;
     height: 40px;
     line-height: 40px;
@@ -210,6 +215,111 @@ nav{
 .sub_menu2 li:hover{
     background-color: #111;
 }
+
+/* 로그인 모달 영역 */
+.login_modal_back{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 10;
+    display: none;
+}
+
+.login_modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    background-color: #fff;
+}
+
+.login_modal h1{
+    text-align: center;
+}
+
+.login_modal input{
+    padding-left: 10px;
+    border: 1px solid black;
+    width: 200px;
+    height: 40px;
+    margin: 5px;
+}
+
+.login_btn_area{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.login_btn_area button{
+    width: 100px;
+    height: 30px;
+    margin: 5px;
+    background-color: #fff;
+    border: 1px solid black;
+}
+
+#login:checked~.login_modal_back{
+    display: block;
+}
+/* 로그인 모달 영역 */
+/* 회원가입 모달 영역 */
+.join_modal_back{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 10;
+    display: none;
+}
+
+.join_modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    background-color: #fff;
+}
+
+.join_modal h1{
+    text-align: center;
+}
+
+.join_modal input{
+    padding-left: 10px;
+    border: 1px solid black;
+    width: 200px;
+    height: 40px;
+    margin: 5px;
+}
+
+.join_btn_area{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.join_btn_area button{
+    width: 100px;
+    height: 30px;
+    margin: 5px;
+    background-color: #fff;
+    border: 1px solid black;
+}
+
+#join:checked~.join_modal_back{
+    display: block;
+}
+/* 회원가입 모달 영역 */
 /* 헤더 영역 */
 /* 비주얼 영역 */
 .visual{
