--- a/Gyeonggi/Desgin/style.css
+++ b/Gyeonggi/Desgin/style.css
@@ -158,6 +158,7 @@ nav{
 }
 
 .slide{
+    position: relative;
     width: 1440px;
     height: 100%;
     margin-left: 30px;
@@ -169,6 +170,18 @@ nav{
 .slide img{
     width: 100%;
     height: 100%;
+}
+
+.slide_txt{
+    padding: 10px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 100px;
+    z-index: 1;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
 }
 
 .slide_num{
