--- a/Gyeonggi/Desgin/style.css
+++ b/Gyeonggi/Desgin/style.css
@@ -338,3 +338,54 @@ nav{
     font-weight: 100;
 }
 /* 공지사항 영역 */
+/* 갤러리 영역 */
+.gall_area{
+    position: relative;
+    width: 100%;
+    height: 1000px;
+    background-color: #E5E6E8;
+}
+
+.gall_area > h1{
+    position: absolute;
+    left: 230px;
+    top: 60px;
+}
+
+.gall{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 1440px;
+    height: 900px;
+    margin-top: 100px;
+    overflow: auto;
+    scroll-snap-type: y mandatory;
+    flex-direction: column;
+}
+
+.gall::-webkit-scrollbar{
+    display: none;
+}
+
+.gall_img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    flex: none;
+    scroll-snap-align: start;
+}
+
+.gall_img img{
+    width: 100%;
+    height: 100%;
+}
+
+.gall_img h1{
+    position: absolute;
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+/* 갤러리 영역 */
